Bug 30952: Fix toolbar positioning and spacing

--- a/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/_toolbar.scss
@@ -7,7 +7,8 @@
     background-color: #f3F4F4;
     border: 0;
     border-radius: 5px 5px 0 0;
-    margin: 0 -15px;
+    padding: 5px;
+    margin-left: 0;
 
     .dropdown-menu {
         border-top-width: 1px;
